feat: Implement Document Service for file management and indexing
- Added DocumentService class for handling document uploads, replacements, and deletions.
- Integrated document parsing and chunking functionality.
- Implemented storage and vector indexing using DocumentStorage and VectorStore.

feat: Introduce LLM Service for language model interactions

- Created LLMService class to manage interactions with various LLM providers.
- Added support for streaming completions and message formatting.

feat: Develop RAG Service for retrieval-augmented generation

- Implemented RagService to handle user queries and context retrieval.
- Integrated with LLMService for generating responses based on indexed documents.

feat: Create Document Repository for database interactions

- Added DocumentRepository class for managing document metadata in the database.
- Implemented methods for listing, retrieving, upserting, and deleting documents.

feat: Establish Security and Settings Management

- Introduced KeyCipher for encrypting API keys.
- Created SettingsService for managing application settings and API keys.

feat: Implement Storage Backends for document storage

- Developed LocalStorage and SupabaseStorage classes for file management.
- Added functionality for saving, reading, and deleting documents.

feat: Add Vector Store for document embeddings and retrieval

- Implemented VectorStore class using Chroma for managing document embeddings.
- Added methods for adding, deleting, and retrieving documents based on similarity search.

docs: Update architecture and functionality documentation

- Added diagrams for system architecture and chat streaming sequence.
- Created detailed setup and run guide, including environment variables and troubleshooting tips.
- Documented tech stack and rationale for technology choices.

--- a/docker-compose.separate.yml
+++ b/docker-compose.separate.yml
@@ -1,43 +1,1 @@
-services:
-  postgres:
-    image: postgres:16-alpine
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB:-ragchat}
-      - POSTGRES_USER=${POSTGRES_USER:-ragchat}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-ragchat}
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-ragchat} -d ${POSTGRES_DB:-ragchat}"]
-      interval: 10s
-      timeout: 5s
-      retries: 8
-    restart: unless-stopped
-
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: rag-chatbot:latest
-    depends_on:
-      postgres:
-        condition: service_healthy
-    env_file:
-      - .env
-    environment:
-      - UV_PROJECT_ENVIRONMENT=${UV_PROJECT_ENVIRONMENT:-rag}
-      - SUPABASE_DB_URL=${SUPABASE_DB_URL}
-      - DATABASE_URL=${DATABASE_URL:-postgresql+psycopg://ragchat:ragchat@postgres:5432/ragchat}
-      - APP_HOST=0.0.0.0
-      - APP_PORT=8000
-      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
-      - OLLAMA_EMBED_MODEL=${OLLAMA_EMBED_MODEL:-nomic-embed-text}
-    ports:
-      - "8000:8000"
-    volumes:
-      - rag_data:/app/data
-    restart: unless-stopped
-
-volumes:
-  pg_data:
-  rag_data:
+# Deprecated: Supabase-only setup\n# Use docker-compose.single.yml\n
