--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,11 @@ APP_HOST=0.0.0.0
 APP_PORT=8000
 UV_PROJECT_ENVIRONMENT=rag
 SUPABASE_DB_URL=postgresql+psycopg://postgres:<password>@db.<project-ref>.supabase.co:5432/postgres?sslmode=require
-DATABASE_URL=
 MAX_UPLOAD_SIZE_MB=200
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_EMBED_MODEL=nomic-embed-text
+OLLAMA_EMBED_MODEL=bge-m3
+DOC_STORAGE_BACKEND=
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_STORAGE_BUCKET=documents
+SUPABASE_STORAGE_PREFIX=documents
