--- a/docker-compose.single.yml
+++ b/docker-compose.single.yml
@@ -9,11 +9,15 @@ services:
     environment:
       - UV_PROJECT_ENVIRONMENT=${UV_PROJECT_ENVIRONMENT:-rag}
       - SUPABASE_DB_URL=${SUPABASE_DB_URL}
-      - DATABASE_URL=${DATABASE_URL}
       - APP_HOST=0.0.0.0
       - APP_PORT=8000
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
-      - OLLAMA_EMBED_MODEL=${OLLAMA_EMBED_MODEL:-nomic-embed-text}
+      - OLLAMA_EMBED_MODEL=${OLLAMA_EMBED_MODEL:-bge-m3}
+      - DOC_STORAGE_BACKEND=${DOC_STORAGE_BACKEND:-}
+      - SUPABASE_URL=${SUPABASE_URL:-}
+      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY:-}
+      - SUPABASE_STORAGE_BUCKET=${SUPABASE_STORAGE_BUCKET:-documents}
+      - SUPABASE_STORAGE_PREFIX=${SUPABASE_STORAGE_PREFIX:-documents}
     ports:
       - "8000:8000"
     volumes:
