--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,6 @@ dependencies = [
   "python-dotenv>=1.2.1",
   "python-multipart>=0.0.22",
   "sqlalchemy>=2.0.46",
+  "supabase>=2.8.1",
   "uvicorn[standard]>=0.40.0",
 ]
