--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "langchain-ollama>=1.0.1",
   "langchain-openai>=1.1.9",
   "langchain-text-splitters>=1.1.0",
+  "psycopg2>=2.9.11",
   "psycopg[binary]>=3.3.2",
   "pydantic>=2.12.5",
   "pypdf>=6.7.0",
