--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     runtime: python
     plan: free
     buildCommand: |
+      mkdir -p app/static
       python -m pip install --upgrade pip
       pip install uv
       uv sync --frozen --no-dev
